잡기 기능 추가